--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="app.js"></script>
     <h1>Página en construcción</h1>
 </body>
 </html>
