se borra div y se pone section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="app.js"></script>
     <h1>Página en construcción</h1>
 
-    <div></div>
+    <section>
+        <ul>
+            <li>Titulo</li>
+        </ul>
+    </section>
 </body>
 </html>
