restaré a versión anterior

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <script src="app.js"></script>
     <h1>Página en construcción</h1>
 
-    <section>
-        <ul>
-            <li>Titulo</li>
-        </ul>
-    </section>
+    <div></div>
 </body>
 </html>
